Select option implemented

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <script src="js/scripts.js" defer></script>
     <div class="container">
         <header>
             <h1>Driven Eats</h1>
@@ -27,24 +28,30 @@
                 <header class="order-header">
                     <h2>Primeiro, seu prato</h2>
                 </header>
-                <article class="carroussel">
+                <article class="carroussel" id="dishes">
                     <div class="card">
                         <img src="./assets/frango_yin_yang.png" alt="Frango Yin Yang">
                         <strong class="option-name">Frango Yin Yang</strong>
                         <p class="option-description">Um pouco de batata, um pouco de salada</p>
-                        <p class="option-price">R$14,90</p>
+                        <div class="check-container">
+                            <p class="option-price">R$14,90</p>
+                        </div>
                     </div>
                     <div class="card">
                         <img src="./assets/frango_yin_yang.png" alt="Frango Yin Yang">
                         <strong class="option-name">Frango Yin Yang</strong>
                         <p class="option-description">Um pouco de batata, um pouco de salada</p>
-                        <p class="option-price">R$15,70</p>
+                        <div class="check-container">
+                            <p class="option-price">R$15,70</p>
+                        </div>
                     </div>
                     <div class="card">
                         <img src="./assets/frango_yin_yang.png" alt="Frango Yin Yang">
                         <strong class="option-name">Frango Yin Yang</strong>
                         <p class="option-description">Um pouco de batata, um pouco de salada</p>
-                        <p class="option-price">R$24,80</p>
+                        <div class="check-container">
+                            <p class="option-price">R$24,80</p>
+                        </div>
                     </div>
                 </article>
             </section>
@@ -52,24 +59,30 @@
                 <header class="order-header">
                     <h2>Agora, sua bebida</h2>
                 </header>
-                <article class="carroussel">
+                <article class="carroussel" id="beverages">
                     <div class="card">
                         <img src="./assets/coquinha_gelada.png" alt="Coquinha Gelada">
                         <strong class="option-name">Coquinha Gelada</strong>
                         <p class="option-description">Lata 350mL</p>
-                        <p class="option-price">R$4,90</p>
+                        <div class="check-container">
+                            <p class="option-price">R$4,90</p>
+                        </div>
                     </div>
                     <div class="card">
                         <img src="./assets/coquinha_gelada.png" alt="Coquinha Gelada">
                         <strong class="option-name">Coquinha Gelada</strong>
                         <p class="option-description">Lata 350mL</p>
-                        <p class="option-price">R$4,90</p>
+                        <div class="check-container">
+                            <p class="option-price">R$4,90</p>
+                        </div>
                     </div>
                     <div class="card">
                         <img src="./assets/coquinha_gelada.png" alt="Coquinha Gelada">
                         <strong class="option-name">Coquinha Gelada</strong>
                         <p class="option-description">Lata 350mL</p>
-                        <p class="option-price">R$4,90</p>
+                        <div class="check-container">
+                            <p class="option-price">R$4,90</p>
+                        </div>
                     </div>
                 </article>
             </section>
@@ -77,24 +90,30 @@
                 <header class="order-header">
                     <h2>Por fim, sua sobremesa</h2>
                 </header>
-                <article class="carroussel">
+                <article class="carroussel" id="deserts">
                     <div class="card">
                         <img src="./assets/pudim.png" alt="Pudim">
                         <strong class="option-name">Pudim</strong>
                         <p class="option-description">Apenas pudim</p>
-                        <p class="option-price">R$ 7,90</p>
+                        <div class="check-container">
+                            <p class="option-price">R$ 7,90</p>
+                        </div>
                     </div>
                     <div class="card">
                         <img src="./assets/pudim.png" alt="Pudim">
                         <strong class="option-name">Pudim</strong>
                         <p class="option-description">Apenas pudim</p>
-                        <p class="option-price">R$ 7,90</p>
+                        <div class="check-container">
+                            <p class="option-price">R$ 7,90</p>
+                        </div>
                     </div>
                     <div class="card">
                         <img src="./assets/pudim.png" alt="Pudim">
                         <strong class="option-name">Pudim</strong>
                         <p class="option-description">Apenas pudim</p>
-                        <p class="option-price">R$ 7,90</p>
+                        <div class="check-container">
+                            <p class="option-price">R$ 7,90</p>
+                        </div>
                     </div>
                 </article>
             </section>
