Add products information to application main state

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <strong class="option-name">Frango Yin Yang</strong>
                         <p class="option-description">Um pouco de batata, um pouco de salada</p>
                         <div class="check-container">
-                            <p class="option-price">R$14,90</p>
+                            <p class="option-price">R$ 14,90</p>
                         </div>
                     </div>
                     <div class="card">
@@ -42,7 +42,7 @@
                         <strong class="option-name">Frango Yin Yang</strong>
                         <p class="option-description">Um pouco de batata, um pouco de salada</p>
                         <div class="check-container">
-                            <p class="option-price">R$15,70</p>
+                            <p class="option-price">R$ 15,70</p>
                         </div>
                     </div>
                     <div class="card">
@@ -50,7 +50,7 @@
                         <strong class="option-name">Frango Yin Yang</strong>
                         <p class="option-description">Um pouco de batata, um pouco de salada</p>
                         <div class="check-container">
-                            <p class="option-price">R$24,80</p>
+                            <p class="option-price">R$ 24,80</p>
                         </div>
                     </div>
                 </article>
@@ -65,7 +65,7 @@
                         <strong class="option-name">Coquinha Gelada</strong>
                         <p class="option-description">Lata 350mL</p>
                         <div class="check-container">
-                            <p class="option-price">R$4,90</p>
+                            <p class="option-price">R$ 4,90</p>
                         </div>
                     </div>
                     <div class="card">
@@ -73,7 +73,7 @@
                         <strong class="option-name">Coquinha Gelada</strong>
                         <p class="option-description">Lata 350mL</p>
                         <div class="check-container">
-                            <p class="option-price">R$4,90</p>
+                            <p class="option-price">R$ 4,90</p>
                         </div>
                     </div>
                     <div class="card">
@@ -81,7 +81,7 @@
                         <strong class="option-name">Coquinha Gelada</strong>
                         <p class="option-description">Lata 350mL</p>
                         <div class="check-container">
-                            <p class="option-price">R$4,90</p>
+                            <p class="option-price">R$ 4,90</p>
                         </div>
                     </div>
                 </article>
@@ -90,7 +90,7 @@
                 <header class="order-header">
                     <h2>Por fim, sua sobremesa</h2>
                 </header>
-                <article class="carroussel" id="deserts">
+                <article class="carroussel" id="desserts">
                     <div class="card">
                         <img src="./assets/pudim.png" alt="Pudim">
                         <strong class="option-name">Pudim</strong>
@@ -118,9 +118,9 @@
                 </article>
             </section>
         </main>
-        <footer>
+        <div class="footer">
             <button disabled>Selecione os 3 itens para fechar o pedido</button>
-        </footer>
+        </div>
     </div>
 </body>
 
