--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </section>
         </main>
         <div class="footer">
-            <button disabled>Selecione os 3 itens para fechar o pedido</button>
+            <button class="disabled" id="order-button" >Selecione os 3 itens para fechar o pedido</button>
         </div>
     </div>
 </body>
