Make order on WhatsApp integration

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <article class="carroussel" id="dishes">
                     <div class="card">
                         <img src="./assets/frango_yin_yang.png" alt="Frango Yin Yang">
-                        <strong class="option-name">Frango Yin Yang</strong>
+                        <strong class="option-name">Frango Yin Yang Pequeno</strong>
                         <p class="option-description">Um pouco de batata, um pouco de salada</p>
                         <div class="check-container">
                             <p class="option-price">R$ 14,90</p>
@@ -39,15 +39,15 @@
                     </div>
                     <div class="card">
                         <img src="./assets/frango_yin_yang.png" alt="Frango Yin Yang">
-                        <strong class="option-name">Frango Yin Yang</strong>
+                        <strong class="option-name">Frango Yin Yang Médio</strong>
                         <p class="option-description">Um pouco de batata, um pouco de salada</p>
                         <div class="check-container">
-                            <p class="option-price">R$ 15,70</p>
+                            <p class="option-price">R$ 18,70</p>
                         </div>
                     </div>
                     <div class="card">
                         <img src="./assets/frango_yin_yang.png" alt="Frango Yin Yang">
-                        <strong class="option-name">Frango Yin Yang</strong>
+                        <strong class="option-name">Frango Yin Yang Grande</strong>
                         <p class="option-description">Um pouco de batata, um pouco de salada</p>
                         <div class="check-container">
                             <p class="option-price">R$ 24,80</p>
@@ -62,26 +62,26 @@
                 <article class="carroussel" id="beverages">
                     <div class="card">
                         <img src="./assets/coquinha_gelada.png" alt="Coquinha Gelada">
-                        <strong class="option-name">Coquinha Gelada</strong>
-                        <p class="option-description">Lata 350mL</p>
+                        <strong class="option-name">Coquinha Gelada - 269mL</strong>
+                        <p class="option-description">Lata 269mL</p>
                         <div class="check-container">
                             <p class="option-price">R$ 4,90</p>
                         </div>
                     </div>
                     <div class="card">
                         <img src="./assets/coquinha_gelada.png" alt="Coquinha Gelada">
-                        <strong class="option-name">Coquinha Gelada</strong>
+                        <strong class="option-name">Coquinha Gelada - 350mL</strong>
                         <p class="option-description">Lata 350mL</p>
                         <div class="check-container">
-                            <p class="option-price">R$ 4,90</p>
+                            <p class="option-price">R$ 5,90</p>
                         </div>
                     </div>
                     <div class="card">
                         <img src="./assets/coquinha_gelada.png" alt="Coquinha Gelada">
-                        <strong class="option-name">Coquinha Gelada</strong>
-                        <p class="option-description">Lata 350mL</p>
+                        <strong class="option-name">Coquinha Gelada - 600mL</strong>
+                        <p class="option-description">Lata 600mL</p>
                         <div class="check-container">
-                            <p class="option-price">R$ 4,90</p>
+                            <p class="option-price">R$ 7,30</p>
                         </div>
                     </div>
                 </article>
@@ -93,7 +93,7 @@
                 <article class="carroussel" id="desserts">
                     <div class="card">
                         <img src="./assets/pudim.png" alt="Pudim">
-                        <strong class="option-name">Pudim</strong>
+                        <strong class="option-name">Pudim Pequeno</strong>
                         <p class="option-description">Apenas pudim</p>
                         <div class="check-container">
                             <p class="option-price">R$ 7,90</p>
@@ -101,18 +101,18 @@
                     </div>
                     <div class="card">
                         <img src="./assets/pudim.png" alt="Pudim">
-                        <strong class="option-name">Pudim</strong>
+                        <strong class="option-name">Pudim Médio</strong>
                         <p class="option-description">Apenas pudim</p>
                         <div class="check-container">
-                            <p class="option-price">R$ 7,90</p>
+                            <p class="option-price">R$ 9,90</p>
                         </div>
                     </div>
                     <div class="card">
                         <img src="./assets/pudim.png" alt="Pudim">
-                        <strong class="option-name">Pudim</strong>
+                        <strong class="option-name">Pudim Grande</strong>
                         <p class="option-description">Apenas pudim</p>
                         <div class="check-container">
-                            <p class="option-price">R$ 7,90</p>
+                            <p class="option-price">R$ 13,90</p>
                         </div>
                     </div>
                 </article>
