Confirmation Modal Built

--- a/index.html
+++ b/index.html
@@ -121,6 +121,33 @@
         <div class="footer">
             <button class="disabled" id="order-button" >Selecione os 3 itens para fechar o pedido</button>
         </div>
+        <div class="modal-container noshow">
+            <div class="modal">
+                <h3 class="modal-title">Confirme seu Pedido</h3>
+                    <div class="order-info">
+                        <div class="item">
+                            <p>Frango Yin Yang</p>
+                            <p>14,90</p>
+                        </div>
+                        <div class="item">
+                            <p>Frango Yin Yang</p>
+                            <p>14,90</p>
+                        </div>
+                        <div class="item">
+                            <p>Frango Yin Yang</p>
+                            <p>14,90</p>
+                        </div>
+                        <div class="total">
+                            <p>TOTAL</p>
+                            <p>R$ 27,70</p>
+                        </div>
+                    </div>
+                    <div class="btns-container">
+                        <button class="confirm">Tudo certo, pode pedir!</button>
+                        <button class="cancel">Cancelar</button>
+                    </div>
+            </div>
+        </div>
     </div>
 </body>
 
