--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
         <div class="footer">
             <button class="disabled" id="order-button" >Selecione os 3 itens para fechar o pedido</button>
         </div>
-        <div class="modal-container noshow">
+        <div class="modal-container noshow" id="modal">
             <div class="modal">
                 <h3 class="modal-title">Confirme seu Pedido</h3>
-                    <div class="order-info">
+                    <div class="order-info" id="order-info">
                         <div class="item">
                             <p>Frango Yin Yang</p>
                             <p>14,90</p>
@@ -143,8 +143,8 @@
                         </div>
                     </div>
                     <div class="btns-container">
-                        <button class="confirm">Tudo certo, pode pedir!</button>
-                        <button class="cancel">Cancelar</button>
+                        <button id="confirm-btn" class="confirm">Tudo certo, pode pedir!</button>
+                        <button id="cancel-btn" class="cancel">Cancelar</button>
                     </div>
             </div>
         </div>
