Bug open whatsapp fixed

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </section>
         </main>
         <div class="footer">
-            <button class="disabled" id="order-button" >Selecione os 3 itens para fechar o pedido</button>
+            <button id="order-button" >Selecione os 3 itens para fechar o pedido</button>
         </div>
         <div class="modal-container noshow" id="modal">
             <div class="modal">
